Improvements in version 1.2.4 (Fri, 14 Jun 2002)

1. main change is the inclusion of development version of Spark: Soot Pointer
   Analysis Research Kit. Available documentation for Spark includes the
   Spark poster (http://www.sable.mcgill.ca/publications/#poster-2002-1)
   and the Spark options 
   (http://www.sable.mcgill.ca/soot/tutorial/phase-options/spark.ps).
   More detailed documentation in the form of a master's thesis is being
   written. (olhotak)
2. new FastHierarchy class designed to eventually replace inefficient and
   confusing Hierarchy class (olhotak)
3. fix for missing control-flow graph edges from predecessors of statements
   in nested try blocks to some exception handlers (jjorge1)
4. make virtual call resolution respect access modifiers (olhotak)

Improvements in version 1.2.3 (Wed, 08 May 2002)

1. fix to SourceLocator for the case where there are no actual
     paths in the soot classpath. (plam)
2. fix to HashMutableDirectedGraph to remove wayward extra
     preds and succs edges to a removed node. (fabien)
3. fix for Windows classpaths which contain less than two letters.
     Formerly, this crashed in charAt(1).  (plam, reported by Mary Payne)
4. add an option '-A LineNumber' to keep line number attributes in
   source class files. (feng)
5. make SootClass.containsBafBody() public (requested by David Airapetyan);
     avoid creating duplicate names in CommonSubexpressionEliminator
         (requested by Florian Mateoc).  Both changes by plam.
6. added changes by Michael Pan (pan@math.tau.ac.il) which make Soot 
     more parsimonious with respect to memory usage:
     it may use up to 20% less maximum heap space.
     Changes were: - sharing of coffi CONSTANT_Utf8_info objects
                   - SootMethod exceptions list created on demand
                   - get[Sub]Signature() storage hack useful for Sun JDK
7. minor changes in HashChain (remove useless null checks, states increments
   and modified insertBefore(List) ) (fabien)